examples/test/testpolicy815.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy815
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key29: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value31
          key42: value46
          key2: value39
      podSelector:
        matchLabels:
          key10: value8
